# smartthings-mcp

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  run.sh
src/: api.py  custom_session.py  server.py
src/mcp_smartthings/: __init__.py  __main__.py  api.py  custom_session.py  server.py
src/st/: __init__.py  command.py  device.py  history.py  links.py  literals.py
test/: test_api.py  test_integration.py
